resources/lab10/01-RegularIngress.yaml
#Gateway to access cluster
#VirtualService to forward traffic with path '/api/color' to Service named 'blue'
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: blue-gateway
  namespace: bluegreen
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "blue.example.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: blue
  namespace: bluegreen
spec:
  hosts:
  - "blue.example.com"
  gateways:
  - blue-gateway
  http:
  - match:
    - uri:
        prefix: /api/color
    route:
    - destination:
        port:
          number: 80
        host: blue
